Updated html resume, made the back to top button not take up so much space, added ps script to start python http server.

--- a/index.html
+++ b/index.html
@@ -42,9 +42,6 @@
 						<a href="#employment-history">Employment History</a>
 					</li>
 					<li>
-						<a href="#education">Education</a>
-					</li>
-					<li>
 						<a href="#professional-work">Professional Work</a>
 					</li>
 					<li>
@@ -52,6 +49,9 @@
 					</li>
 					<li>
 						<a href="#writings">Writings</a>
+					</li>
+					<li>
+						<a href="#education">Education</a>
 					</li>
 					<li>
 						<a href="#contact-info">Contact Info</a>
@@ -84,7 +84,7 @@
 				<h2 id="employment-history">Employment History</h2>
 				<ul>
 					<li>Royal Bank of Canada - Developer (Spring Boot/Angular) - 2019 (Current)</li>
-					<li>Royal Bank of Canada - Developer (Spring MVC/Sprint Boot/J2EE) - 2017</li>
+					<li>Royal Bank of Canada - Developer (Spring MVC/Sprint Boot/J2EE) - 2017-2019</li>
 					<li>Royal Bank of Canada - Developer (Co-op) - 2016</li>
 					<li>Royal Bank of Canada - Technical Systems Analyst (Co-op) - 2015</li>
 					<li>Royal Bank of Canada - IT Accessibility and Solutions Developer (Co-op) - 2015</li>
@@ -95,66 +95,79 @@
 			</div>
 
 			<div class="content-container">
-				<h2 id="education">Education</h2>
-				<p>Centennial College - Toronto, Ontario</p>
-				<p>Software Engineering Technology, 2012 to December 2016 - Advanced Diploma (With Honours)</p>
-			</div>
-
-			<div class="content-container">
 				<h1 id="professional-work">Professional Work</h1>
 
-				<h2 id="business-banking-portal-development">Business Banking Portal Development (API Developer/RBC)</h2>
-				<p>
-					As part of this role my primary responsibilities were to continuously develop and maintain presentation/domain APIs,
-					integrated and automated test suites, and, occasionally, assist in the development of frontend modern Angular based
-					components to support a modern business banking portal supporting thousands of clients and millions of dollars in transactions
-					annually.
-				</p>
+				<h2 id="business-banking-portal-development">Business Banking Portal Development (Full Stack Developer/RBC)
+					(2019/Current)</h2>
 				<ul>
-					<li>Developed multiple Java/Spring Boot/Maven stateless microservices using a scrum like methodology in 2 week sprint cycles</li>
-					<li>Ensured product quality through the implementation of granular automated tests including unit tests, integration tests
-						with WireMock, contract tests with PACT, and mutation tests using PIT</li>
-					<li>Ensured application resiliency and banking portal scalability by taking advantage of latest Spring conventions including
-						reactive and asynchronous paradigms and PCF auto-scaling configurations</li>
-					<li>Applications built deployed via Jenkins and Urban Code Deploy through an automated continuous integration pipeline and
-						hosted on the Pivotal Cloud Foundry platform</li>
-					<li>Debugged production level defects and issues using standard application logs and Dynatrace tracking</li>
-					<li>Designed and implemented structured database schemas using MariaDB for features like user preferences and approval workflows
-						with the help of Liquibase and Spring JPA</li>
-					<li>Expanded communication and presentation skills through the assistance of a dedicated Ezra coaching sessions</li>
+					<li>Developed multiple Java/Spring Boot/Maven stateless microservices using a scrum like
+						methodology in 2 week sprint cycles</li>
+					<li>Ensured product quality through the implementation of granular automated tests including
+						unit tests, integration tests with WireMock, contract tests with PACT, and mutation tests using
+						PIT, for execution on a mature CI/CD pipeline</li>
+					<li>Ensured application resiliency and banking portal scalability by taking advantage of latest
+						Spring conventions including reactive and asynchronous paradigms, developing semi-
+						transparent proxies for caching server-to-server communications, and creating optimized
+						database ORM queries, relationships, and indexes</li>
+					<li>Implemented integrations with external service provides like Verified.Me and SSO to other
+						financial and accounting portals</li>
+					<li>Applications built deployed via Jenkins and Urban Code Deploy through an automated
+						continuous integration pipeline and hosted on the Pivotal Cloud Foundry platform</li>
+					<li>Worked with QA and QE teams to design and setup test data for verifying complex flows and
+						simulating complex companies setups and legal agreements</li>
+					<li>Debugged production level defects and issues using standard application logs and Dynatrace
+						tracking</li>
+					<li>Designed and implemented structured database schemas using MariaDB for features like user
+						preferences and approval workflows with the help of Liquibase and Spring JPA</li>
+					<li>Expanded communication and presentation skills through dedicated Ezra coaching sessions</li>
 				</ul>
 
 				<div class="divider"></div>
 
-				<h2 id="personal-online-banking-service-development">Personal Online Banking Service Development</h2>
-				<p>
-					As part of RBC's Digital Development team we are responsible for creating, managing, and otherwise maintaining many front end
-					and service layer components running on Websphere Portal, Spring MVC, and Angular 2+ platforms that support thousands of clients
-					and tens of millions of dollars in transactions annually.
-				</p>
+				<h2 id="online-banking-service-development">Online Banking Service Development (Developer/RBC) (2017-
+					2019)</h2>
 				<ul>
-					<li>Developed multiple backend services using Spring Boot and Spring MVC with Maven to support various online banking
-						features like self-serve loan management, GIC purchase and renewal, and online foreign currency ordering</li>
-					<li>Created multi-channel applications that support customer and employee assisted channels utilizing LDAP/SPNEGO for
-						automatic employee authentication</li>
-					<li>Developed upon, and maintained, legacy Websphere applications running on a remote Windows VM</li>
-					<li>Applications primarily built and deployed via Jenkins and Urban Code Deploy through an automated continuous
-						integration pipeline and hosted on the Bluemix platform</li>
-					<li>Developed, largely, in a Waterfall style methodology with dedicated quality assurance team members</li>
+					<li>Developed multiple backend services using Spring Boot and Spring MVC with Maven to
+						support various online banking features like self-serve loan management, GIC purchase and
+						renewal, and online foreign currency ordering</li>
+					<li>Created multi-channel applications that support customer and employee assisted channels
+						utilizing LDAP/SPNEGO for automatic employee authentication</li>
+					<li>Developed upon, and maintained, legacy Websphere applications running on a remote
+						Windows VM</li>
+					<li>Worked with internal security teams to identify and resolve application security vulnerabilities
+						through an internal pen-testing process</li>
+					<li>Applications primarily built and deployed via Jenkins and Urban Code Deploy through an
+						automated continuous integration pipeline and hosted on the Bluemix platform</li>
+					<li>Developed, largely, in a Waterfall style methodology with dedicated quality assurance team
+						members</li>
 				</ul>
 
 				<div class="divider"></div>
 
-				<h2 id="accessibility-analysis-and-training">Accessibility Analysis and Training</h2>
+				<h2 id="developer-co-op">Developer (Co-op/RBC) (2016)</h2>
 				<ul>
-					<li>Gave a lectures to hundreds of Government of Ontario employees demonstrating
-						how to create accessible Word/PDF documents and how to use JAWS</li>
-					<li>Met with clients at external locations and provided personalized training and
-						advice for individuals and teams</li>
-					<li>Analyzed government websites and documents against the Web Content Accessibility
-						Guidelines to identify possible issues and accessibility deficiencies primarily
-						using Job Access With Speech (JAWS) software</li>
-					<li>Documented issues, prepared reports, and presented findings to clients</li>
+					<li>Analyzed existing Enterprise Java applications running on the Websphere server on remote
+						Windows VMs</li>
+					<li>Developed a prototype MEAN stack application to enable developers the ability to create
+						mock cloud server endpoints capable of dynamic and meaningful responses through simple
+						building blocks without the need for any complex coding</li>
+					<li>Troubleshot remote Windows VM development environment issues</li>
+					<li>Developed stories using the standard waterfall methodologies</li>
+					<li>Codebase managed and revisioned through SVN and Git</li>
+				</ul>
+
+				<div class="divider"></div>
+
+				<h2 id="accessibility-analysis-and-training">Technical System Analyst (Co-op/RBC) (2015)</h2>
+				<ul>
+					<li>Created a prototype Android Wearable based app for making ATM withdrawals in a more
+						convenient and quick manner without the use of a typical debit card</li>
+					<li>Created a prototype web application for polling, similar to Straw Poll, for gathering feedback
+						and questions during live presentations using Angular 1 + MongoDB and hosted on a private
+						Bluemix cloud instance</li>
+					<li>Adapted feature base, and expanded existing features, based on internal client feedback and
+						changing requirements</li>
+					<li>Developed in an informal think-tank like structure</li>
 				</ul>
 
 			</div>
@@ -224,6 +237,12 @@
 				<a href="https://github.com/AndrewEC/AndrewEC.github.io/blob/master/static/files/Guide_to_Creating_Accessible_Emails_in_Outlook.docx?raw=true"
 						target="_blank" rel="noreferrer" class="bottom-link">
 					Guide to Creating Accessible Emails in Outlook [229 KB]</a>
+			</div>
+
+			<div class="content-container">
+				<h2 id="education">Education</h2>
+				<p>Centennial College - Toronto, Ontario</p>
+				<p>Software Engineering Technology, 2012 to December 2016 - Advanced Diploma (With Honours)</p>
 			</div>
 
 			<div id="last-container" class="content-container">
