--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 				<p>One of my first independant projects; a simple Java based tool to check colour combinations against WCAG 2.0 colour contrast criteria.</p>
 				<ul>
 					<li>Has simple eye dropper tool to select any colour on screen</li>
-					<li>Build in snipping tool to take easy screenshots</li>
+					<li>Built in snipping tool to take easy screenshots</li>
 					<li>Window imager/magnifier to take screenshots of particular application windows</li>
 					<li>Colour blind filters that can be used with the previously mentioned tools</li>
 				</ul>
