Updated personal projects section.

--- a/index.html
+++ b/index.html
@@ -173,6 +173,7 @@
 
             <div class="content-container">
                 <h1 id="personal-projects">Personal Projects</h1>
+
                 <h2>har-server</h2>
                 <p>A command line Python/FastAPI server designed to help serve content from a series of Http Archive (.har)
                     files to enable users to retain local copies of old and unmaintained websites for personal use.</p>
@@ -199,14 +200,14 @@
 
                 <div class="divider"></div>
 
-                <h2>SteganographyNotepad</h2>
-                <p>An Avalonia UI wrapper the SteganographyApp that acts like a simple text editor to secretly stash text within images.</p>
+                <h2>MarkdownNotes</h2>
+                <p>MarkdownNotes is a single, self-contained, HTML file that provides functionality to edit and view Markdown formatted text in a Notebook esque format. </p>
                 <ul>
-                    <li>Cross-platform support through the Avalonia UI framework.</li>
-                    <li>Visual settings tab to customize encryption/obfuscation options.</li>
-                    <li>Optional functionality to quickly erase data in images.</li>
+                    <li>A notebook within a single self-contained HTML. No external dependencies or downloads required.</li>
+                    <li>Edit and preview notes in a markdown format.</li>
+                    <li>Supports embedding images.</li>
                 </ul>
-                <a href="https://github.com/AndrewEC/SteganographyNotepad" target="_blank" rel="noreferrer" class="bottom-link" title="View Steganography app on Github">View on Github</a>
+                <a href="https://github.com/AndrewEC/MarkdownNotes" target="_blank" rel="noreferrer" class="bottom-link" title="View MarkdownNotes app on Github">View on Github</a>
 
             </div>
 
